fix base CSS color too light

--- a/soyuz_app/static/sass/main.scss
+++ b/soyuz_app/static/sass/main.scss
@@ -83,7 +83,7 @@
         --#{$variable-prefix}#{$color}-rgb: #{$value};
     }
 
-    $body-color: #eeeeee;
+    $body-color: #626262;
     $body-bg: $light;
 
     --#{$variable-prefix}body-color: #{$body-color};
